docs: more docs